# bird-doc-app

./: .gitignore  ARCHITECTURE.md  BACKEND_REFERENCE.md  CLAUDE.md  CONTEXT.md  Caddyfile  Datenmeldung_Vorlage_IWM.xlsx  FEEDBACK.md  FRONTEND_REFERENCE.md  README.md  TASKS.md  angular.json  artenattribute.md  auslaendischer-ring-feature.md  docker-compose.prod.yml  docker-compose.yml  field_order.txt  github-action-frontend-build-logs.txt  package-lock.json  setup-worktrees.sh  verify-run.md
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Promts.md  README.md  dev-credentials-superuser.txt  manage.py  pyproject.toml  requirements.txt
backend/birddoc/: asgi.py  conf.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/birds/: accounts.py  admin.py  auth_backends.py  auth_urls.py  auth_views.py  capture_service.py  feedback_urls.py  feedback_views.py  handle_regeneration.py  invitations.py  iwm_anonymize.py  iwm_export.py  iwm_import.py  kuerzel.py  models.py  payload_schema.py  permissions.py  project_stats.py  registration.py  serializers.py  species_norms.py  station_handle.py  tenancy.py  urls.py  views.py
backend/birds/demo/: README.md  demo_iwm.xlsx  generate_sample_iwm.py  sample_iwm_illmitz.xlsx
backend/birds/migrations/: 0001_initial.py  0002_alter_dataentry_hand_wing_and_more.py  0003_import_species_data.py  0004_dataentry_has_brood_patch_dataentry_has_cpl_plus_and_more.py  0005_alter_dataentry_age_class_alter_dataentry_sex.py  0006_alter_dataentry_small_feather_app.py  0015_specieslist.py  (+72 more)
backend/landing/: admin.py  ai_visibility.py  fang_formular.py  fang_karte.py  forms.py  glossar.py  models.py  seo.py  stats.py  urls.py  views.py  wissen.py
backend/res/: .~lock.artenliste_2024.csv#  artenliste_2024.csv  global-birds.csv
(+443 files in other folders)
