[project]
name = "birddoc"
version = "0.1.0"
description = "Django REST API for bird ringing documentation"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<5.3",
    "djangorestframework>=3.16,<4",
    "django-cors-headers>=4.7,<5",
    "django-environ>=0.12,<1",
    "gunicorn>=26,<27",
    "openpyxl>=3.1,<4",
    "psycopg[binary]>=3.2,<4",
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-django>=4.9,<5",
    "ruff>=0.7,<1",
]

[tool.ruff]
line-length = 100
target-version = "py313"
# Migrations are generated; the birds/demo standalone data-generation scripts
# hold wide literal data tables and are not part of the app runtime — both are
# exempt from lint/format like generated code.
extend-exclude = ["*/migrations/*", "*/demo/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "birddoc.settings_test"
python_files = ["test_*.py", "*_test.py", "tests.py"]
